--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,13 @@ uuid = "4d185f6f-9c3f-4b7c-9166-636828f15909"
 authors = ["Nick Owens <owensnick@gmail.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+Measures = "442fdcdd-2543-5da2-b0f3-8c86c306513e"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
+Turing = "fce5fe82-541a-59a6-adf8-730c64b5f9a0"
+
 [compat]
 julia = "1"
 
