--- a/Project.toml
+++ b/Project.toml
@@ -4,8 +4,11 @@ authors = ["Nick Owens <owensnick@gmail.com> and contributors"]
 version = "0.1.0"
 
 [deps]
+AdvancedMH = "5b7e9947-ddc0-4b3f-9b55-0d8042f74170"
+BioSequences = "7e6ae17a-c86d-528c-b3b9-7f778a29fe59"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+FASTX = "c2308a5c-f048-11e8-3e8a-31650f418d12"
 Measures = "442fdcdd-2543-5da2-b0f3-8c86c306513e"
 Optimisers = "3bd65402-5787-11e9-1adc-39752487f4e2"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
